base/LoginApp/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
  namespace: loginapp-dev
spec:
  selector:
    app: login-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
