base/LoginApp/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: login-app-route
  namespace: loginapp-dev
spec:
  to:
    kind: Service
    name: login-app-service
  port:
    targetPort: 8080
